authorization/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: config
        image: jpiecuch/authorization:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
