authorization/templates/db-service.yml
kind: Service
apiVersion: v1
metadata:
  name: auth-postgres-service
spec:
  selector:
    app: auth-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
