authorization/templates/external-service.yml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 8085
    nodePort: 30085
