authorization/templates/service.yml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
