authorization/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: authorization
    http:
      paths:
      - path: /
        backend:
          serviceName: auth-service
          servicePort: 8085
